--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,53 +10,47 @@ on:
 
 jobs:
   download_music:
-    # Using ubuntu-latest is recommended as it usually has recent tools/versions
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Step 2: Set up Python - By omitting python-version, it uses the action's default (usually recent)
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '>=3.9'
-        # No 'with: python-version' means it uses the default Python version
-        # provided by the setup-python action, often the latest stable one
-        # it supports or the one pre-installed on the runner.
-        
+          python-version: '3.10'
 
-      # Step 3: Install ffmpeg
       - name: Install ffmpeg
         run: |
           sudo apt-get update
           sudo apt-get install -y ffmpeg
 
-      # Step 4: Install/Upgrade spotdl AND yt-dlp
-      - name: Install/Upgrade spotdl and yt-dlp
+      - name: Install spotdl
         run: |
-          python -m pip install --upgrade pip # Use 'python -m pip' for clarity
-          python -m pip install --upgrade spotdl yt-dlp --update-to nightly
+          python -m pip install --upgrade pip
+          python -m pip install --upgrade spotdl
 
-      # Optional: Check versions after setup/upgrade
+      - name: Install yt-dlp nightly
+        run: |
+          sudo curl -L https://github.com/yt-dlp/yt-dlp-nightly-builds/releases/latest/download/yt-dlp -o /usr/local/bin/yt-dlp
+          sudo chmod a+rx /usr/local/bin/yt-dlp
+
       - name: Check versions
         run: |
-          python --version # Check the Python version being used
+          python --version
           spotdl --version
           yt-dlp --version
           ffmpeg -version
 
       - name: Create download directory
-        run: mkdir music-downloads
+        run: mkdir -p music-downloads
 
       - name: Download music using spotdl
         run: |
           echo "Attempting to download from: ${{ github.event.inputs.spotify_url }}"
-          # Using INFO level logging. Use DEBUG for more verbosity if needed.
           spotdl download "${{ github.event.inputs.spotify_url }}" --output ./music-downloads --log-level INFO
 
-      # Debugging Step (Keep it to verify downloads before upload attempt)
       - name: List files in download directory
         run: |
           echo "Current directory: $(pwd)"
@@ -71,5 +65,4 @@ jobs:
           name: downloaded-music
           path: ./music-downloads/
           retention-days: 7
-          # Fail the workflow explicitly if no files were downloaded
           if-no-files-found: error
